<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="login">LOGIN</string>
    <string name="sing_up">SING UP</string>
    <string name="s_deixo_criar_a_conta_se_marcar_aqui">Só deixo criar a conta se marcar aqui.</string>
    <string name="name">name</string>
    <string name="SIGN_UP">SiGN UP</string>
    <string name="for_your_account">FOR YOUR ACCOUNT</string>
    <string name="Welcome">WELCOME</string>

</resources>