<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/SIGN_UP"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/for_your_account"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/txtNameSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:autofillHints="" />


        <EditText
            android:id="@+id/txtEmailSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/txtPasswordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/s_deixo_criar_a_conta_se_marcar_aqui"
            android:textColor="@color/colorAccent" />


        <Button
            android:id="@+id/btnSingUp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/sing_up"
            android:textColor="@color/colorWhite"
            android:enabled="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogIn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent" />


    </LinearLayout>


</LinearLayout>
